# get-metars

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
get_metars/: __main__.py  get.py  sanitize.py
get_metars/database/: __init__.py  get.py
src/: __main__.py  get.py
tests/: test_get_metars.py  test_remove_spaces.py  test_sanitize_metar.py
