[tool.poetry]
name = "get-metars"
version = "0.5.1"
description = "Simple command line tool to download METAR's and TAF's for a given station and store them in text files."
readme = "README.md"
authors = ["diego-garro <diego.garromolina@yahoo.com>"]
license = "MIT"
repository = "https://github.com/diego-garro/tafver-metars"

[tool.poetry.scripts]
get-metars = 'get_metars.__main__:app'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
aiohttp = "^3.12.14"
html5lib = "^1.1"
pydantic = "^2.11.7"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
mypy = "^1.16.1"
pylint = "^3.3.7"
bump2version = "^1.0.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
